feat(persistence): implement bitemporal storage engine using XTDB
- Create 'temporal-db' component with RocksDB (Prod) and In-Memory (Test) topologies.
- Add 'Smart Persistence' logic (ingest-bar!, ingest-signal!).
- Add 'Time Travel' query capabilities for historical auditing.
- Implement integration tests with clean state fixtures.
- Configure Kaocha runner for full monorepo testing coverage.
- Add logging configuration to silence XTDB verbosity."

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ projects/**/pom.xml
 .calva/output-window/output.calva-repl
 .calva/repl.calva-repl
 
+# --- Ark Engine Data ---
+# Ignore local RocksDB persistence
+xtdb-data/
+xtdb-events/
+
+# Ignore temporary test files (in case any leak)
+/tmp/ark-test-*
+
+# Ignore sensitive local configurations (if any in the future)
+config.edn
+.env
