feat(ingestion): implement resilient redis consumer
- Add 'ingestor' component with Consumer Group pattern.
- Implement Poison Message handling (DLQ + Ack).
- Implement Graceful Shutdown for safe testing.
- Add integration tests covering Happy Path, Poison Path, and Transient Failures.
- Dependency Injection for configuration in core.clj.

--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,10 @@ projects/**/pom.xml
 .lsp/.cache
 
 # clj-kondo
-.clj-kondo/.cache
+.clj-kondo
 
 # Calva VS Code Extension
-.calva/output-window/output.calva-repl
-.calva/repl.calva-repl
+.calva
 
 # --- Ark Engine Data ---
 # Ignore local RocksDB persistence
